<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="237dp"
        android:layout_height="220dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aaa" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user" />

    <TextView
        android:id="@+id/txt_NIC"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_NIC"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NIC" />

    <TextView
        android:id="@+id/txt_contact"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_contact"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_work"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_work"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contact" />

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_type"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_work" />

    <TextView
        android:id="@+id/txt_license"
        android:layout_width="269dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_license"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_type" />
</androidx.constraintlayout.widget.ConstraintLayout>